--- a/Web1/Web1/Web1.csproj
+++ b/Web1/Web1/Web1.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Src\js\" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
 </Project>
