--- a/Web1/Web1/Web1.csproj
+++ b/Web1/Web1/Web1.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <Folder Include="Src\js\" />
     <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\lib\" />
   </ItemGroup>
 
 </Project>
