--- a/Web1/Web1/tsconfig.json
+++ b/Web1/Web1/tsconfig.json
@@ -12,6 +12,7 @@
     "removeComments": false,
 
     "target": "es5",
+    //"lib": [ "es2015", "dom" ],
     "rootDir": "./src/ts",
     "outDir": "./src/js",
     "sourceMap": true
